# Thesean

./: .gitignore  LICENSE  README.md  pyproject.toml  test_diagnostics.py
.github/workflows/: ci.yml
examples/: generate.py
examples/f1_demo_workspace_empty/: thesean.toml
src/psystack/: __init__.py
src/psystack/adapters/f1/: controllers.py  env.py  factory.py  planner.py  world_model.py
src/psystack/cli/wizard/: questions.py  review.py
src/psystack/core/: contracts.py
src/psystack/evaluation/metrics/: __init__.py
src/psystack/models/: run.py
src/psystack/pipeline/: context.py  event_extraction.py  paired_runner.py  runner.py  workspace.py
src/psystack/pipeline/stages/: events.py
src/psystack/tui/: app.py  services.py
src/psystack/tui/screens/: case_history.py  case_verdict.py  investigation.py
src/thesean/: __init__.py  __main__.py
src/thesean/adapters/: registry.py
src/thesean/cli/: app.py  version_check.py
src/thesean/core/: config.py  contracts.py  signal_schema.py
src/thesean/models/: __init__.py  case.py  comparison.py  episode.py  evaluation_result.py  event.py  evidence.py  explanation.py  isolation.py  manifest.py  metric.py  project.py  run.py  signal.py  swap.py
src/thesean/pipeline/: case_io.py  compare_module.py  context.py  episodes.py  event_extraction.py  live_update.py  metrics_util.py  paired_runner.py  runner.py  staleness.py  state.py  workspace.py
src/thesean/reporting/: bundle.py  evidence.py  types.py
src/thesean/tui/: actions.py  app.py  detection.py  services.py  state.py
tests/: conftest.py  test_raster_size_inference.py
tests/adapters/: test_protocol_compat.py
tests/adapters/f1/: test_adapter_contract.py  test_signal_completeness.py  test_signal_schema.py  test_signals.py
tests/models/: conftest.py  test_domain_models.py  test_episode_models.py  test_evaluation_result.py  test_model_properties.py
tests/pipeline/: test_compare_module.py  test_dependency_graph.py  test_framework_integration.py  test_live_update.py  test_report_build.py  test_report_bundle.py  test_report_stage.py  test_run_context.py  test_runner_semantics.py  test_stage_selection.py  test_staleness.py  test_state_semantics.py
tests/pipeline/compare/: test_decision.py  test_edge_cases.py  test_property.py  test_schema.py  test_stats.py
tests/pipeline/events/: test_detection.py
tests/pipeline/isolation/: test_attribution.py  test_designs.py  test_schema.py
tests/tui/: conftest.py  test_app_flows.py  test_detection.py  test_state_transitions.py  test_widget_interactions.py
tests/tui/screens/: test_investigation_screen.py  test_run_builder_screen.py  test_screen_mode_transitions.py
tests/tui/widgets/: conftest.py  test_case_bar.py  test_progress_summary.py  test_transport_bar.py
(+96 files in other folders)
